# speech

./: Makefile  README.md  pyproject.toml
speech/: speech.py
